# mankala

./: AI.cpp  AI.h  BoardState.cpp  BoardState.h  CMakeLists.txt  Helper.h  Mankala.cpp  Mankala.h  main.cpp
